auth-app/auth_app_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-proxy
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: auth
          servicePort: 8000
        path: /auth/
      - backend:
          serviceName: auth
          servicePort: 8000
        path: /login/
      - backend:
          serviceName: auth
          servicePort: 8000
        path: /register/
      - backend:
          serviceName: auth
          servicePort: 8000
        path: /logout/
